--- a/Assignment 02.ipynb
+++ b/Assignment 02.ipynb
@@ -18,10 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e83383b-b9eb-4718-9a8d-2edfc4fc2f41",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your full name  how are you\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your string have 5 vowels\n"
+     ]
+    }
+   ],
    "source": [
     "text = input(\"Enter your full name \")\n",
     "count = 0 \n",
@@ -49,10 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "32556ca2-7790-4807-b3ea-5632f284dac4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter anything what you want  Tell Me About Your Learning\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your string have 5 uppercase \n",
+      "your string have 18 lowercase \n",
+      "your string have 0 digit \n",
+      "your string have 4 whitespace\n"
+     ]
+    }
+   ],
    "source": [
     "st = input(\"Enter anything what you want \")\n",
     "uper = 0\n",
@@ -85,10 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ab7529af-be80-4457-a433-b0a034a8b59f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter hello  HELLO\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OELLH\n"
+     ]
+    }
+   ],
    "source": [
     "text = input(\"Enter hello \")\n",
     "text = text.upper()\n",
@@ -110,10 +158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "28e33af5-4790-48e1-9718-1b01320a6f46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter any name and get reverse  EXAM\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAXE\n"
+     ]
+    }
+   ],
    "source": [
     "n = input(\"Enter any name and get reverse \")\n",
     "rev = \"\"\n",
@@ -133,10 +196,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9dc33db7-211c-44ca-b896-bba77fee9b97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the string  exnamination 2021\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xnamination 2021e\n"
+     ]
+    }
+   ],
    "source": [
     "a = input(\"Enter the string \")\n",
     "if len(a) > 1:\n",
@@ -156,10 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "37ed6709-3bf4-4cec-9924-616b95ac980d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your full name (First Middle Last):  Muhammad Hammad zia\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initals:  M. H. Z. \n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Enter your full name (First Middle Last): \")\n",
     "intitals = \"\"\n",
@@ -183,10 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f138cb8-9647-43df-9adf-7890962139d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Check your String is pallindrome or not:  hammad\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a pallindrome\n"
+     ]
+    }
+   ],
    "source": [
     "pal = input(\"Check your String is pallindrome or not: \")\n",
     "rev = \"\"\n",
@@ -215,10 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "26b604a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SHIFT\n",
+      "HIFTS\n",
+      "IFTSH\n",
+      "FTSHI\n",
+      "TSHIF\n",
+      "SHIFT\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"SHIFT\"\n",
     "\n",
@@ -242,10 +363,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a16f7082-0cb9-4de4-b01c-d47c0d2fa9ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a password:  Hammad123\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password is Correct\n"
+     ]
+    }
+   ],
    "source": [
     "pas = input(\"Enter a password: \")\n",
     "\n",
@@ -254,12 +390,12 @@
     "has_digit = False\n",
     "\n",
     "if len(pas) >= 8:\n",
-    "    for ch in pas:\n",
-    "        if pas.isupper():\n",
+    "    for i in pas:\n",
+    "        if i.isupper():\n",
     "            has_upper = True\n",
-    "        elif pas.islower():\n",
+    "        elif i.islower():\n",
     "            has_lower = True\n",
-    "        elif pas.isdigit():\n",
+    "        elif i.isdigit():\n",
     "            has_digit = True\n",
     "\n",
     "    if has_upper and has_lower and has_digit:\n",
@@ -269,13 +405,21 @@
     "else:\n",
     "    print(\"It must be at least 8 characters long and atleast one uppercase,one lowercase and one numeric\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8231e397-6cb3-4a20-99ff-dbb54d6fc460",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (anaconda)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "anaconda"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
