--- a/Assignment 01(python_basic).ipynb
+++ b/Assignment 01(python_basic).ipynb
@@ -16,9 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Muhammad Hammad Zia\n",
+      "Father_Name: Zia-ul-Hassan \n",
+      "DOB: 23-05-2003\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Name: Muhammad Hammad Zia\\nFather_Name: Zia-ul-Hassan \\nDOB: 23-05-2003\")"
    ]
@@ -32,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is me M.Hammad and i'm a student of third semester and now i am learning Cloud Data Engineering from SMIT.\n"
+     ]
+    }
+   ],
    "source": [
     "bio = (\"This is me M.Hammad and i'm a student of third semester and now i am learning Cloud Data Engineering from SMIT.\")\n",
     "print(bio)"
@@ -49,9 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "-13\n",
+      "90\n",
+      "3814697265625\n",
+      "0.2777777777777778\n",
+      "0\n",
+      "7\n",
+      "13\n",
+      "14\n",
+      "4.333333333333333\n",
+      "2.0\n",
+      "196\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "a = 5\n",
     "b = 18\n",
@@ -106,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,9 +189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your Salary  65000\n",
+      "Enter your Service duration in year  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are not eligible for Bonus\n"
+     ]
+    }
+   ],
    "source": [
     "salary = int(input(\"Enter your Salary \"))\n",
     "year = int(input(\"Enter your Service duration in year \"))\n",
@@ -167,14 +229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your age  45\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a valid number!\n"
+      "You are Eligible for Voting\n"
      ]
     }
    ],
@@ -197,9 +266,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a Number  25\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25  It is Odd Number\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter a Number \"))\n",
     "\n",
@@ -218,9 +302,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a Number  57\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57  is not dividible by 7\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter a Number \"))\n",
     "\n",
@@ -240,9 +339,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a Number  2850\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter a Number \"))\n",
     "\n",
@@ -261,9 +375,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your name  hammad\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Enter your name \")\n",
     "print(name[-1])"
@@ -278,9 +407,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a Lenght  68\n",
+      "Enter a Breadth  69\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is Rectangle\n"
+     ]
+    }
+   ],
    "source": [
     "length = int(input(\"Enter a Lenght \"))\n",
     "breadth = int(input(\"Enter a Breadth \"))\n",
@@ -299,9 +444,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Any Number  58\n",
+      "Enter Any Number  63\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b = 63 is greter than a = 58\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input(\"Enter Any Number \"))\n",
     "b = int(input(\"Enter Any Number \"))\n",
@@ -324,9 +485,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your purchased Amount  6500\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You got 10% discount \n",
+      " Your new amount is 6435.0\n"
+     ]
+    }
+   ],
    "source": [
     "amount =  int(input(\"Enter your purchased Amount \"))\n",
     "if amount > 1000:\n",
@@ -360,9 +537,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your MArks  65\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B Garde\n"
+     ]
+    }
+   ],
    "source": [
     "marks = int(input(\"Enter your MArks \"))\n",
     "if marks > 80:\n",
@@ -400,9 +592,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter No of Classes Held  6\n",
+      "Enter No of Classes Attended  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attendance Percentage 83%\n",
+      "You are Eligible for sit Exams \n",
+      "Your attendance is 83\n"
+     ]
+    }
+   ],
    "source": [
     "no_cls_held = int(input(\"Enter No of Classes Held \"))\n",
     "no_cls_attend = int(input(\"Enter No of Classes Attended \"))\n",
@@ -423,9 +633,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "do you have any medical cause give ans in 'yes'or 'no'  no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are allow o sit in Exam\n"
+     ]
+    }
+   ],
    "source": [
     "medical_cause = input(\"do you have any medical cause give ans in 'yes'or 'no' \")\n",
     "if attendance >= 75:\n",
@@ -447,9 +672,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a year:  2005\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2005 is not a leap year\n"
+     ]
+    }
+   ],
    "source": [
     "leap_year = int(input(\"Enter a year: \"))\n",
     "if leap_year % 400 == 0 or leap_year % 4  == 0 and leap_year % 100 != 0:\n",
@@ -475,9 +715,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your Gender(M/F):  m\n",
+      "Enter your age:  52\n",
+      "Enter your marital status(Y/N):  n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He will work urban areas only\n"
+     ]
+    }
+   ],
    "source": [
     "gender = input(\"Enter your Gender(M/F): \")\n",
     "Age = int(input(\"Enter your age: \"))\n",
@@ -515,9 +772,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Your K.E Bill unit:  250\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your K.E bill Amount is 2500\n"
+     ]
+    }
+   ],
    "source": [
     "unit = int(input(\"Enter Your K.E Bill unit: \"))\n",
     "if unit <= 100:\n",
@@ -535,9 +807,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -553,5 +825,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
